<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>jobrunr-performance-test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>JobRunrPro</id>
            <url>https://repo.jobrunr.io/private-releases/</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>OSS-v6</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr</artifactId>
                    <version>6.3.5</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>OSS-v7</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr</artifactId>
                    <version>7.3.0</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>OSS-v8</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr</artifactId>
                    <version>1.0.0-SNAPSHOT</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>PRO-v6</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr-pro</artifactId>
                    <version>6.3.10</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>PRO-v7</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr-pro</artifactId>
                    <version>7.3.0</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>PRO-v8</id>
            <dependencies>
                <dependency>
                    <groupId>org.jobrunr</groupId>
                    <artifactId>jobrunr-pro</artifactId>
                    <version>1.0.0-SNAPSHOT</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.jobrunr</groupId>
            <artifactId>jobrunr-pro</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <scope>provided</scope> <!-- will be provided by profile -->
        </dependency>
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>4.2.21</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.7</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.3</version>
        </dependency>
        <dependency>
            <groupId>de.siegmar</groupId>
            <artifactId>fastcsv</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.zeroturnaround</groupId>
            <artifactId>zt-zip</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>12.4.2.jre11</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>p6spy</groupId>
            <artifactId>p6spy</artifactId>
            <version>3.9.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>org.jobrunr.performance.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>